clean up and modify data prep
modified data_prep script because everything is now in a single csv file

--- a/marcus/Forecasting.ipynb
+++ b/marcus/Forecasting.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,51 +28,100 @@
     "import statsmodels.api as sm\n",
     "from statsmodels.tsa.ar_model import AutoReg, ar_select_order\n",
     "from statsmodels.tsa.api import acf, pacf, graphics\n",
-    "import data_prep\n",
+    "import data_prep_modified as dpm\n",
     "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_prep.get_lagged(\"./data/XLE_energy_etf.csv\", n=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.read_csv(\"./data/SnP_500.csv\", index_col=\"Date\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Date',\n",
+       " 'Open_Pharm',\n",
+       " 'High_Pharm',\n",
+       " 'Low_Pharm',\n",
+       " 'Close_Pharm',\n",
+       " 'Adj Close_Pharm',\n",
+       " 'Volume_Pharm',\n",
+       " 'Open_Semicon',\n",
+       " 'High_Semicon',\n",
+       " 'Low_Semicon',\n",
+       " 'Close_Semicon',\n",
+       " 'Adj Close_Semicon',\n",
+       " 'Volume_Semicon',\n",
+       " 'Open_SNP500',\n",
+       " 'High_SNP500',\n",
+       " 'Low_SNP500',\n",
+       " 'Close_SNP500',\n",
+       " 'Adj Close_SNP500',\n",
+       " 'Volume_SNP500',\n",
+       " 'Open_Industrial',\n",
+       " 'High_Industrial',\n",
+       " 'Low_Industrial',\n",
+       " 'Close_Industrial',\n",
+       " 'Adj Close_Industrial',\n",
+       " 'Volume_Industrial',\n",
+       " 'Open_Energy',\n",
+       " 'High_Energy',\n",
+       " 'Low_Energy',\n",
+       " 'Close_Energy',\n",
+       " 'Adj Close_Energy',\n",
+       " 'Volume_Energy',\n",
+       " 'Open_Financial',\n",
+       " 'High_Financial',\n",
+       " 'Low_Financial',\n",
+       " 'Close_Financial',\n",
+       " 'Adj Close_Financial',\n",
+       " 'Volume_Financial',\n",
+       " 'Open_Tech',\n",
+       " 'High_Tech',\n",
+       " 'Low_Tech',\n",
+       " 'Close_Tech',\n",
+       " 'Adj Close_Tech',\n",
+       " 'Volume_Tech',\n",
+       " 'Open_Utilities',\n",
+       " 'High_Utilities',\n",
+       " 'Low_Utilities',\n",
+       " 'Close_Utilities',\n",
+       " 'Adj Close_Utilities',\n",
+       " 'Volume_Utilities',\n",
+       " 'Open_Consumer',\n",
+       " 'High_Consumer',\n",
+       " 'Low_Consumer',\n",
+       " 'Close_Consumer',\n",
+       " 'Adj Close_Consumer',\n",
+       " 'Volume_Consumer']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = data_prep.get_perc_return(\"./data/SnP_500.csv\", column_name=\"Adj Close\")"
+    "data = pd.read_csv(\"./data/output.csv\")\n",
+    "list(data.columns) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.dropna()\n",
-    "df.isna().sum()\n",
-    "df['Date'] = pd.to_datetime(df['Date'], infer_datetime_format=True)"
+    "#variable prep commands, replace snp500 with variable of choice\n",
+    "snp500delta = dpm.get_perc_return(data, column_name=\"Adj Close_SNP500\")\n",
+    "snp500delta.set_index('Date', inplace=True)\n",
+    "#for some reason, I cant put the set_index command in the function because of some error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -105,23 +154,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2010-01-05</th>\n",
+       "      <th>5/1/2010</th>\n",
        "      <td>0.003116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-01-06</th>\n",
+       "      <th>6/1/2010</th>\n",
        "      <td>0.000546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-01-07</th>\n",
+       "      <th>7/1/2010</th>\n",
        "      <td>0.004001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-01-08</th>\n",
+       "      <th>8/1/2010</th>\n",
        "      <td>0.002882</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-01-11</th>\n",
+       "      <th>11/1/2010</th>\n",
        "      <td>0.001747</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -129,28 +178,27 @@
        "</div>"
       ],
       "text/plain": [
-       "            %_returns\n",
-       "Date                 \n",
-       "2010-01-05   0.003116\n",
-       "2010-01-06   0.000546\n",
-       "2010-01-07   0.004001\n",
-       "2010-01-08   0.002882\n",
-       "2010-01-11   0.001747"
+       "           %_returns\n",
+       "Date                \n",
+       "5/1/2010    0.003116\n",
+       "6/1/2010    0.000546\n",
+       "7/1/2010    0.004001\n",
+       "8/1/2010    0.002882\n",
+       "11/1/2010   0.001747"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "indexeddf = df.set_index(['Date'])\n",
-    "indexeddf.head()"
+    "snp500delta.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -158,44 +206,36 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\Hamu\\AppData\\Roaming\\Python\\Python37\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:218: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
-      "  ' ignored when e.g. forecasting.', ValueWarning)\n"
+      "  ' ignored when e.g. forecasting.', ValueWarning)\n",
+      "C:\\Users\\Hamu\\AppData\\Roaming\\Python\\Python37\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:222: ValueWarning: A date index has been provided, but it is not monotonic and so will be ignored when e.g. forecasting.\n",
+      "  ' forecasting.', ValueWarning)\n"
      ]
-    }
-   ],
-   "source": [
-    "ar_1 = AutoReg(indexeddf, lags =1).fit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
        "<table class=\"simpletable\">\n",
        "<caption>AutoReg Model Results</caption>\n",
        "<tr>\n",
-       "  <th>Dep. Variable:</th>     <td>%_returns</td>    <th>  No. Observations:  </th>   <td>2579</td>  \n",
+       "  <th>Dep. Variable:</th>     <td>%_returns</td>    <th>  No. Observations:  </th>   <td>2570</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Model:</th>            <td>AutoReg(1)</td>    <th>  Log Likelihood     </th> <td>8053.771</td>\n",
+       "  <th>Model:</th>            <td>AutoReg(1)</td>    <th>  Log Likelihood     </th> <td>8102.487</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Method:</th>         <td>Conditional MLE</td> <th>  S.D. of innovations</th>   <td>0.011</td> \n",
+       "  <th>Method:</th>         <td>Conditional MLE</td> <th>  S.D. of innovations</th>   <td>0.010</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>          <td>Fri, 03 Apr 2020</td> <th>  AIC                </th>  <td>-9.084</td> \n",
+       "  <th>Date:</th>          <td>Mon, 06 Apr 2020</td> <th>  AIC                </th>  <td>-9.143</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>              <td>16:57:18</td>     <th>  BIC                </th>  <td>-9.077</td> \n",
+       "  <th>Time:</th>              <td>14:01:12</td>     <th>  BIC                </th>  <td>-9.137</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Sample:</th>                <td>1</td>        <th>  HQIC               </th>  <td>-9.081</td> \n",
+       "  <th>Sample:</th>                <td>1</td>        <th>  HQIC               </th>  <td>-9.141</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th></th>                     <td>2579</td>       <th>                     </th>     <td> </td>   \n",
+       "  <th></th>                     <td>2570</td>       <th>                     </th>     <td> </td>   \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -203,10 +243,10 @@
        "        <td></td>          <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>intercept</th>    <td>    0.0004</td> <td>    0.000</td> <td>    2.024</td> <td> 0.043</td> <td> 1.35e-05</td> <td>    0.001</td>\n",
+       "  <th>intercept</th>    <td>    0.0004</td> <td>    0.000</td> <td>    1.882</td> <td> 0.060</td> <td>-1.59e-05</td> <td>    0.001</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>%_returns.L1</th> <td>   -0.1557</td> <td>    0.019</td> <td>   -7.998</td> <td> 0.000</td> <td>   -0.194</td> <td>   -0.118</td>\n",
+       "  <th>%_returns.L1</th> <td>   -0.1533</td> <td>    0.020</td> <td>   -7.836</td> <td> 0.000</td> <td>   -0.192</td> <td>   -0.115</td>\n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -215,7 +255,7 @@
        "    <td></td>   <th>            Real</th>  <th>         Imaginary</th> <th>         Modulus</th>  <th>        Frequency</th>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>AR.1</th> <td>          -6.4214</td> <td>          +0.0000j</td> <td>           6.4214</td> <td>           0.5000</td>\n",
+       "  <th>AR.1</th> <td>          -6.5230</td> <td>          +0.0000j</td> <td>           6.5230</td> <td>           0.5000</td>\n",
        "</tr>\n",
        "</table>"
       ],
@@ -224,33 +264,34 @@
        "\"\"\"\n",
        "                            AutoReg Model Results                             \n",
        "==============================================================================\n",
-       "Dep. Variable:              %_returns   No. Observations:                 2579\n",
-       "Model:                     AutoReg(1)   Log Likelihood                8053.771\n",
-       "Method:               Conditional MLE   S.D. of innovations              0.011\n",
-       "Date:                Fri, 03 Apr 2020   AIC                             -9.084\n",
-       "Time:                        16:57:18   BIC                             -9.077\n",
-       "Sample:                             1   HQIC                            -9.081\n",
-       "                                 2579                                         \n",
+       "Dep. Variable:              %_returns   No. Observations:                 2570\n",
+       "Model:                     AutoReg(1)   Log Likelihood                8102.487\n",
+       "Method:               Conditional MLE   S.D. of innovations              0.010\n",
+       "Date:                Mon, 06 Apr 2020   AIC                             -9.143\n",
+       "Time:                        14:01:12   BIC                             -9.137\n",
+       "Sample:                             1   HQIC                            -9.141\n",
+       "                                 2570                                         \n",
        "================================================================================\n",
        "                   coef    std err          z      P>|z|      [0.025      0.975]\n",
        "--------------------------------------------------------------------------------\n",
-       "intercept        0.0004      0.000      2.024      0.043    1.35e-05       0.001\n",
-       "%_returns.L1    -0.1557      0.019     -7.998      0.000      -0.194      -0.118\n",
+       "intercept        0.0004      0.000      1.882      0.060   -1.59e-05       0.001\n",
+       "%_returns.L1    -0.1533      0.020     -7.836      0.000      -0.192      -0.115\n",
        "                                    Roots                                    \n",
        "=============================================================================\n",
        "                  Real          Imaginary           Modulus         Frequency\n",
        "-----------------------------------------------------------------------------\n",
-       "AR.1           -6.4214           +0.0000j            6.4214            0.5000\n",
+       "AR.1           -6.5230           +0.0000j            6.5230            0.5000\n",
        "-----------------------------------------------------------------------------\n",
        "\"\"\""
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "ar_1 = AutoReg(snp500delta, lags =1).fit()\n",
     "ar_1.summary()"
    ]
   }
