--- a/marcus/Forecasting.ipynb
+++ b/marcus/Forecasting.ipynb
@@ -20,21 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.tsa.ar_model import AutoReg, ar_select_order\n",
-    "from statsmodels.tsa.api import acf, pacf, graphics\n",
+    "from statsmodels.tsa.api import acf, pacf, graphics, VAR\n",
     "import data_prep_modified as dpm\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        " 'Volume_Consumer']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -213,87 +213,246 @@
     },
     {
      "data": {
-      "text/html": [
-       "<table class=\"simpletable\">\n",
-       "<caption>AutoReg Model Results</caption>\n",
-       "<tr>\n",
-       "  <th>Dep. Variable:</th>     <td>%_returns</td>    <th>  No. Observations:  </th>   <td>2570</td>  \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Model:</th>            <td>AutoReg(1)</td>    <th>  Log Likelihood     </th> <td>8102.487</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Method:</th>         <td>Conditional MLE</td> <th>  S.D. of innovations</th>   <td>0.010</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Date:</th>          <td>Mon, 06 Apr 2020</td> <th>  AIC                </th>  <td>-9.143</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Time:</th>              <td>14:01:12</td>     <th>  BIC                </th>  <td>-9.137</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Sample:</th>                <td>1</td>        <th>  HQIC               </th>  <td>-9.141</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th></th>                     <td>2570</td>       <th>                     </th>     <td> </td>   \n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "        <td></td>          <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>intercept</th>    <td>    0.0004</td> <td>    0.000</td> <td>    1.882</td> <td> 0.060</td> <td>-1.59e-05</td> <td>    0.001</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>%_returns.L1</th> <td>   -0.1533</td> <td>    0.020</td> <td>   -7.836</td> <td> 0.000</td> <td>   -0.192</td> <td>   -0.115</td>\n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<caption>Roots</caption>\n",
-       "<tr>\n",
-       "    <td></td>   <th>            Real</th>  <th>         Imaginary</th> <th>         Modulus</th>  <th>        Frequency</th>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>AR.1</th> <td>          -6.5230</td> <td>          +0.0000j</td> <td>           6.5230</td> <td>           0.5000</td>\n",
-       "</tr>\n",
-       "</table>"
-      ],
       "text/plain": [
-       "<class 'statsmodels.iolib.summary.Summary'>\n",
-       "\"\"\"\n",
-       "                            AutoReg Model Results                             \n",
-       "==============================================================================\n",
-       "Dep. Variable:              %_returns   No. Observations:                 2570\n",
-       "Model:                     AutoReg(1)   Log Likelihood                8102.487\n",
-       "Method:               Conditional MLE   S.D. of innovations              0.010\n",
-       "Date:                Mon, 06 Apr 2020   AIC                             -9.143\n",
-       "Time:                        14:01:12   BIC                             -9.137\n",
-       "Sample:                             1   HQIC                            -9.141\n",
-       "                                 2570                                         \n",
-       "================================================================================\n",
-       "                   coef    std err          z      P>|z|      [0.025      0.975]\n",
-       "--------------------------------------------------------------------------------\n",
-       "intercept        0.0004      0.000      1.882      0.060   -1.59e-05       0.001\n",
-       "%_returns.L1    -0.1533      0.020     -7.836      0.000      -0.192      -0.115\n",
-       "                                    Roots                                    \n",
-       "=============================================================================\n",
-       "                  Real          Imaginary           Modulus         Frequency\n",
-       "-----------------------------------------------------------------------------\n",
-       "AR.1           -6.5230           +0.0000j            6.5230            0.5000\n",
-       "-----------------------------------------------------------------------------\n",
-       "\"\"\""
+       "-9.143433697491265"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ar_1 = AutoReg(snp500delta, lags =1).fit()\n",
-    "ar_1.summary()"
+    "ar_1.summary()\n",
+    "ar_1.aic"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pharmdelta = dpm.get_perc_return(data, column_name=\"Adj Close_Pharm\")\n",
+    "pharmdelta.set_index('Date', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pharmdelta.columns = ['pharm_returns']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>%_returns</th>\n",
+       "      <th>pharm_returns</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5/1/2010</th>\n",
+       "      <td>0.003116</td>\n",
+       "      <td>-0.009392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6/1/2010</th>\n",
+       "      <td>0.000546</td>\n",
+       "      <td>0.004966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7/1/2010</th>\n",
+       "      <td>0.004001</td>\n",
+       "      <td>-0.001647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8/1/2010</th>\n",
+       "      <td>0.002882</td>\n",
+       "      <td>0.000300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11/1/2010</th>\n",
+       "      <td>0.001747</td>\n",
+       "      <td>0.006899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16/3/2020</th>\n",
+       "      <td>-0.119841</td>\n",
+       "      <td>-0.089813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17/3/2020</th>\n",
+       "      <td>0.059955</td>\n",
+       "      <td>0.060510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18/3/2020</th>\n",
+       "      <td>-0.051831</td>\n",
+       "      <td>-0.052955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19/3/2020</th>\n",
+       "      <td>0.004708</td>\n",
+       "      <td>-0.007876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20/3/2020</th>\n",
+       "      <td>-0.043360</td>\n",
+       "      <td>-0.025997</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2570 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           %_returns  pharm_returns\n",
+       "Date                               \n",
+       "5/1/2010    0.003116      -0.009392\n",
+       "6/1/2010    0.000546       0.004966\n",
+       "7/1/2010    0.004001      -0.001647\n",
+       "8/1/2010    0.002882       0.000300\n",
+       "11/1/2010   0.001747       0.006899\n",
+       "...              ...            ...\n",
+       "16/3/2020  -0.119841      -0.089813\n",
+       "17/3/2020   0.059955       0.060510\n",
+       "18/3/2020  -0.051831      -0.052955\n",
+       "19/3/2020   0.004708      -0.007876\n",
+       "20/3/2020  -0.043360      -0.025997\n",
+       "\n",
+       "[2570 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adl_df = pd.concat([snp500delta,pharmdelta], axis = 1)\n",
+    "adl_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Hamu\\AppData\\Roaming\\Python\\Python37\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:218: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
+      "  ' ignored when e.g. forecasting.', ValueWarning)\n",
+      "C:\\Users\\Hamu\\AppData\\Roaming\\Python\\Python37\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:222: ValueWarning: A date index has been provided, but it is not monotonic and so will be ignored when e.g. forecasting.\n",
+      "  ' forecasting.', ValueWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "  Summary of Regression Results   \n",
+       "==================================\n",
+       "Model:                         VAR\n",
+       "Method:                        OLS\n",
+       "Date:           Mon, 06, Apr, 2020\n",
+       "Time:                     19:16:33\n",
+       "--------------------------------------------------------------------\n",
+       "No. of Equations:         2.00000    BIC:                   -90.0695\n",
+       "Nobs:                     2570.00    HQIC:                  -90.0753\n",
+       "Log likelihood:           108462.    FPE:                7.57476e-40\n",
+       "AIC:                     -90.0786    Det(Omega_mle):     7.56298e-40\n",
+       "--------------------------------------------------------------------\n",
+       "Results for equation %_returns\n",
+       "================================================================================\n",
+       "                   coefficient       std. error           t-stat            prob\n",
+       "--------------------------------------------------------------------------------\n",
+       "const                 0.000083         0.000120            0.695           0.487\n",
+       "pharm_returns         0.833727         0.011717           71.157           0.000\n",
+       "================================================================================\n",
+       "\n",
+       "Results for equation pharm_returns\n",
+       "=======================================================================================\n",
+       "                   coefficient       std. error                  t-stat            prob\n",
+       "---------------------------------------------------------------------------------------\n",
+       "const                 0.000000         0.000000                   0.965           0.335\n",
+       "pharm_returns         1.000000         0.000000  114109960128737408.000           0.000\n",
+       "=======================================================================================\n",
+       "\n",
+       "Correlation matrix of residuals\n",
+       "                 %_returns  pharm_returns\n",
+       "%_returns         1.000000      -0.002554\n",
+       "pharm_returns    -0.002554       1.000000\n",
+       "\n"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = VAR(adl_df, exog = adl_df['pharm_returns']).fit(maxlags=15, ic='aic')\n",
+    "test.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'VARResults' object has no attribute 'endog_names'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-33-535f47e1adb0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mendog_names\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python37\\site-packages\\statsmodels\\base\\wrapper.py\u001b[0m in \u001b[0;36m__getattribute__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m     34\u001b[0m             \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m         \u001b[0mobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m         \u001b[0mhow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_wrap_attrs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mattr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'VARResults' object has no attribute 'endog_names'"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
