Added TensorFlow but not yet finished

--- a/JJ's Forecasting-checkpoint.ipynb
+++ b/JJ's Forecasting-checkpoint.ipynb
@@ -9,11 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Couldn't find program: 'bash'\n"
+     ]
+    }
+   ],
    "source": [
     "# %%bash\n",
     "# pip install statsmodels pandas numpy"
@@ -36,9 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -86,6 +92,42 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>2010-01-04</th>\n",
+       "      <td>57.919998</td>\n",
+       "      <td>58.810001</td>\n",
+       "      <td>57.790001</td>\n",
+       "      <td>58.810001</td>\n",
+       "      <td>44.789688</td>\n",
+       "      <td>16928400</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-05</th>\n",
+       "      <td>58.889999</td>\n",
+       "      <td>59.410000</td>\n",
+       "      <td>58.619999</td>\n",
+       "      <td>59.290001</td>\n",
+       "      <td>45.155247</td>\n",
+       "      <td>17368100</td>\n",
+       "      <td>44.789688</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-06</th>\n",
+       "      <td>59.320000</td>\n",
+       "      <td>60.180000</td>\n",
+       "      <td>59.189999</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>45.695988</td>\n",
+       "      <td>24351900</td>\n",
+       "      <td>45.155247</td>\n",
+       "      <td>44.789688</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2010-01-07</th>\n",
        "      <td>59.740002</td>\n",
        "      <td>60.009998</td>\n",
@@ -108,42 +150,6 @@
        "      <td>45.627445</td>\n",
        "      <td>45.695988</td>\n",
        "      <td>45.155247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-11</th>\n",
-       "      <td>60.689999</td>\n",
-       "      <td>60.869999</td>\n",
-       "      <td>59.730000</td>\n",
-       "      <td>60.220001</td>\n",
-       "      <td>45.863533</td>\n",
-       "      <td>19459900</td>\n",
-       "      <td>45.924469</td>\n",
-       "      <td>45.627445</td>\n",
-       "      <td>45.695988</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-12</th>\n",
-       "      <td>59.299999</td>\n",
-       "      <td>59.709999</td>\n",
-       "      <td>59.040001</td>\n",
-       "      <td>59.349998</td>\n",
-       "      <td>45.200943</td>\n",
-       "      <td>21510600</td>\n",
-       "      <td>45.863533</td>\n",
-       "      <td>45.924469</td>\n",
-       "      <td>45.627445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-13</th>\n",
-       "      <td>59.320000</td>\n",
-       "      <td>59.799999</td>\n",
-       "      <td>58.520000</td>\n",
-       "      <td>59.570000</td>\n",
-       "      <td>45.368496</td>\n",
-       "      <td>22137500</td>\n",
-       "      <td>45.200943</td>\n",
-       "      <td>45.863533</td>\n",
-       "      <td>45.924469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -219,17 +225,17 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2568 rows × 9 columns</p>\n",
+       "<p>2571 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                 Open       High        Low      Close  Adj Close    Volume  \\\n",
        "Date                                                                          \n",
+       "2010-01-04  57.919998  58.810001  57.790001  58.810001  44.789688  16928400   \n",
+       "2010-01-05  58.889999  59.410000  58.619999  59.290001  45.155247  17368100   \n",
+       "2010-01-06  59.320000  60.180000  59.189999  60.000000  45.695988  24351900   \n",
        "2010-01-07  59.740002  60.009998  59.299999  59.910000  45.627445  17449500   \n",
        "2010-01-08  59.700001  60.349998  59.490002  60.299999  45.924469  13344300   \n",
-       "2010-01-11  60.689999  60.869999  59.730000  60.220001  45.863533  19459900   \n",
-       "2010-01-12  59.299999  59.709999  59.040001  59.349998  45.200943  21510600   \n",
-       "2010-01-13  59.320000  59.799999  58.520000  59.570000  45.368496  22137500   \n",
        "...               ...        ...        ...        ...        ...       ...   \n",
        "2020-03-16  27.950001  31.120001  27.670000  27.809999  27.809999  40233600   \n",
        "2020-03-17  28.080000  29.180000  26.950001  28.000000  28.000000  45443600   \n",
@@ -239,11 +245,11 @@
        "\n",
        "            Adj Close_1  Adj Close_2  Adj Close_3  \n",
        "Date                                               \n",
+       "2010-01-04          NaN          NaN          NaN  \n",
+       "2010-01-05    44.789688          NaN          NaN  \n",
+       "2010-01-06    45.155247    44.789688          NaN  \n",
        "2010-01-07    45.695988    45.155247    44.789688  \n",
        "2010-01-08    45.627445    45.695988    45.155247  \n",
-       "2010-01-11    45.924469    45.627445    45.695988  \n",
-       "2010-01-12    45.863533    45.924469    45.627445  \n",
-       "2010-01-13    45.200943    45.863533    45.924469  \n",
        "...                 ...          ...          ...  \n",
        "2020-03-16    32.189999    29.469999    33.669998  \n",
        "2020-03-17    27.809999    32.189999    29.469999  \n",
@@ -251,7 +257,7 @@
        "2020-03-19    23.980000    28.000000    27.809999  \n",
        "2020-03-20    25.610001    23.980000    28.000000  \n",
        "\n",
-       "[2568 rows x 9 columns]"
+       "[2571 rows x 9 columns]"
       ]
      },
      "execution_count": 3,
@@ -386,9 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -504,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +605,7 @@
        "4  2010-01-08  59.700001  60.349998  59.490002  60.299999  45.924469  13344300"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +748,7 @@
        "max    6.946960e+07  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +870,7 @@
        "2010-01-08  59.700001  60.349998  59.490002  60.299999  45.924469  13344300"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,16 +882,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x204e3aed3c8>]"
+       "[<matplotlib.lines.Line2D at 0x1de2e353348>]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -914,16 +918,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x204e3b4a3c8>]"
+       "[<matplotlib.lines.Line2D at 0x1de2e5cf648>]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -959,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
